--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -14,6 +14,10 @@
   border-radius: 6px;
 }
 
+.product-detail {
+  text-align: center;
+}
+
 .product-detail img {
   margin-top: 6px;
   border-radius: 8px;
@@ -21,7 +25,12 @@
 
 .product-detail h3 {
   font-size: 16px;
-  margin: 0;
+  margin-top: 5px;
+}
+
+.product-detail p {
+  font-size: 18px;
+  margin-top: 5px;
 }
 
 .product-actions {
